Done basic socket battle feature
