# be/UserService/src/routers/v1/user.router.ts
@@ -1,13 +1,20 @@
 import express from "express";
 import {
   changePasswordHandler,
+  getUserEloHandler,
   getProfileHandler,
   updateProfileHandler,
+  updateUserEloHandler,
 } from "../../controllers/user.controller";
-import { authenticateAccessToken } from "../../middlewares/auth.middleware";
-import { validateRequestBody } from "../../validators";
+import {
+  authenticateAccessToken,
+  authenticateServiceToken,
+} from "../../middlewares/auth.middleware";
+import { validateRequestBody, validateRequestParams } from "../../validators";
 import {
   changePasswordSchema,
+  updateUserEloSchema,
+  userIdParamsSchema,
   updateUserSchema,
 } from "../../validators/user.validator";
 
@@ -27,6 +34,21 @@ userRouter.post(
   authenticateAccessToken,
   validateRequestBody(changePasswordSchema),
   changePasswordHandler,
+);
+
+userRouter.get(
+  "/:id/elo",
+  authenticateServiceToken,
+  validateRequestParams(userIdParamsSchema),
+  getUserEloHandler,
+);
+
+userRouter.patch(
+  "/:id/elo",
+  authenticateServiceToken,
+  validateRequestParams(userIdParamsSchema),
+  validateRequestBody(updateUserEloSchema),
+  updateUserEloHandler,
 );
 
 export default userRouter;
